# BankingSystem

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: format-check.yml
include/: Account.h  Bank.h  Customer.h  TransactionManager.h  types.h
src/: Account.cpp  Bank.cpp  Customer.cpp  TransactionManager.cpp  test.cpp
src/ui/: AccountTableModel.cpp  AccountTableModel.h  AdminDashboard.cpp  AdminDashboard.h  AuditLogModel.cpp  AuditLogModel.h  BackendWorker.cpp  BackendWorker.h  CustomerDashboard.cpp  CustomerDashboard.h  LoginScreen.cpp  LoginScreen.h  MainWindow.cpp  MainWindow.h  SessionManager.cpp  SessionManager.h  main.cpp
